--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -12,4 +12,7 @@
         %h1
           =link_to "Community Shelf", "/"
         %hr
+      -unless request.message.blank?
+        .message.span-10.prepend-6.postpend-6.last
+          %span=request.message
       =catch_content :for_layout
