edit/update books and ISBNDB calls are working again

--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -1,10 +1,9 @@
--if request.message
-  .span-24
-    %span.message=request.message
 .span-12
   =form_for :book, :action => url(:new_book), :id => :new_book do
     =fieldset :legend => "New Book" do
-      #isbn=text_field :isbn, :label => "ISBN: "
+      #isbn
+        =text_field :isbn, :label => "ISBN: "
+        =submit "lookup"
       #short_title=text_field :short_title, :label => "Short Title: "
       #long_title=text_field :long_title, :label => "Long Title: "
       #author=text_field :author, :label => "Author(s): "
