--- a/app/views/dash/index.html.haml
+++ b/app/views/dash/index.html.haml
@@ -8,4 +8,4 @@
 .span-6.last
   =partial 'sessions/short'
   %span.toolbar=link_to "Browse Books", url(:books)
-  %span.toolbar=link_to "Add New Book", url(:books)
+  %span.toolbar=link_to "Add New Book", url(:new_book)
