--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -32,26 +32,13 @@
       %h3.alt Notes
     .span-12.prepend-3.postpend-3
       =@book.notes
-  -unless @book.reviews.empty?
-    .span-18
-      %hr
-      %h3.alt Reviews
-      %hr
-  -@book.reviews.each do |review|
-    .span-18
-      .review{:id => "review-#{review.id}"}
-        %span.score='&#9733;' * review.score
-        %span.alt=review.user.name
-        %span.date="(#{time_lost_in_words(DateTime.now, review.created_at)} ago)"
-        %hr
-        %p
-          %blockquote=review.body
+  -fetch_partial 'reviews/for_book', :book => @book, :updated_at => (@book.reviews.latest.updated_at rescue nil) unless @book.reviews.empty?
   .span-18
     =error_messages_for @review
   .span-18
     %hr    
     -unless session.user.nil?
-      =form_for Review.new, :action => url(:new_review), :class => :review do
+      =form_for @review, :action => url(:new_review), :class => :review do
         =fieldset :legend => "Add a Review" do
           =select :score, :collection => (1..5).map {|i| [i, '&#9733;' * i]}
           =text_area :body
