removing debugger references

--- a/app/views/dash/index.html.haml
+++ b/app/views/dash/index.html.haml
@@ -1,6 +1,6 @@
 .span-18
   .span-18.last
-    -debugger; fetch_partial 'books/recently_added', :updated_at => (Book.latest.updated_at rescue nil)
+    -fetch_partial 'books/recently_added', :updated_at => (Book.latest.updated_at rescue nil)
   .span-11
     -fetch_partial 'reservations/overdue_rank', :updated_at => (Reservation.latest.updated_at rescue nil)
   .span-7.last
